--- a/index.html
+++ b/index.html
@@ -1,84 +1,261 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Character Select & Game</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game</title>
+    <style>
+        /* Global Styles */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+        }
+
+        .game-container {
+            position: relative;
+            height: 100vh;
+            width: 100vw;
+            overflow: hidden;
+        }
+
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('./Windows.webp');
+            background-size: cover;
+            background-position: center;
+            z-index: -2;
+        }
+
+        .background-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.7);
+            z-index: -1;
+        }
+
+        /* Character Select */
+        .character-select {
+            text-align: center;
+            padding: 20px;
+            position: relative;
+            z-index: 10;
+        }
+
+        .character-select h1 {
+            color: #333;
+            text-shadow: 2px 2px 4px rgba(255,255,255,0.5);
+        }
+
+        .character-grid {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+
+        .character-card {
+            cursor: pointer;
+            border: 3px solid transparent;
+            transition: all 0.3s ease;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: rgba(255,255,255,0.8);
+            width: 150px;
+        }
+
+        .character-card:hover {
+            border-color: #FFD700;
+            transform: scale(1.05);
+        }
+
+        .character-card.selected {
+            border-color: #FF4500;
+            background-color: rgba(255, 69, 0, 0.2);
+        }
+
+        .character-card img {
+            max-width: 100%;
+            max-height: 150px;
+            object-fit: contain;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        #start-game {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #start-game:hover {
+            background-color: #45a049;
+        }
+
+        .game-screen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('./PVZ Lawn.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+
+        #gameCanvas {
+            width: 100%;
+            height: 100%;
+        }
+
+        #game-ui {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 100;
+        }
+
+        #health-bar {
+            width: 250px;
+            height: 25px;
+            background-color: #ff0000;
+            border: 2px solid #000;
+            border-radius: 10px;
+            overflow: hidden;
+            margin-top: 10px;
+            position: relative;
+        }
+
+        #health-fill {
+            width: 100%;
+            height: 100%;
+            background-color: #00ff00;
+            transition: width 0.3s ease;
+        }
+
+        #health-text {
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            color: white;
+            text-shadow: 1px 1px 2px black;
+            top: -25px;
+            font-weight: bold;
+        }
+
+        /* Game Over Screen */
+        .game-over-menu {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 30px;
+            border-radius: 15px;
+            text-align: center;
+            z-index: 1000;
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
+        }
+
+        #game-over-title {
+            font-size: 2em;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        #return-to-select {
+            padding: 15px 30px;
+            font-size: 1.2em;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        #return-to-select:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-  <div id="game-container" class="game-container">
+    <!-- Background Music -->
+    <audio id="background-music" src="./background-music.mp3" loop></audio>
+    <audio id="battle-music"></audio>
+
     <!-- Character Select Screen -->
-    <div id="character-select-screen">
-      <div class="background-image"></div>
-      <div class="background-overlay"></div>
-      <div class="character-select">
-        <h1>Choose Your Character</h1>
-        <div class="mission-brief hidden">
-          <h2>Level 1: Patrick's Floppa Army</h2>
-          <div class="mission-content">
-            <div class="mission-image">
-              <img src="/Patrick_Star.svg.png" alt="Patrick with Floppa" style="width: 200px;">
-              <img src="/floppa_png-removebg-preview.png" alt="Floppa" style="width: 150px;">
-            </div>
-            <div class="mission-text">
-              <p class="story">Patrick Star has gone mad with power! After discovering a mysterious ability to command an army of Floppas, 
-              he's taken over the peaceful garden and threatens to expand his territory. His Floppa minions are causing chaos everywhere!</p>
-              <p class="objective">Your Mission: Defeat Patrick Star and his army of Floppa companions before his power grows too strong!</p>
-              <ul class="mission-details">
-                <li>Boss Health: 300 HP</li>
-                <li>Watch out for Floppa reinforcements!</li>
-                <li>Find weapon upgrades to increase your damage!</li>
-              </ul>
-            </div>
-          </div>
-          <button id="start-game">Start Game</button>
-        </div>
+    <div id="character-select-screen" class="character-select">
+        <h1>Select Your Character</h1>
         <div class="character-grid">
-          <div class="character-card" data-character="Steve">
-            <img src="/the REAL REAL STEVE.jpg" alt="Steve">
-            <p>Steve</p>
-          </div>
-          <div class="character-card" data-character="Among Us">
-            <img src="/an871k4o1sn51 (1).png" alt="Among Us">
-            <p>Among Us</p>
-          </div>
-          <div class="character-card" data-character="Roblox Noob">
-            <img src="/OIP (1).jfif" alt="Roblox Noob">
-            <p>Roblox Noob</p>
-          </div>
-          <div class="character-card" data-character="Mario">
-            <img src="/smb1 mario idle.webp" alt="Mario">
-            <p>Mario</p>
-          </div>
+            <div class="character-card" data-character="Steve">
+                <img src="./the REAL REAL STEVE.jpg" alt="Steve">
+                <p>Steve</p>
+            </div>
+            <div class="character-card" data-character="Mario">
+                <img src="./smb1 mario idle.webp" alt="Mario">
+                <p>Mario</p>
+            </div>
+            <div class="character-card" data-character="Among Us">
+                <img src="./an871k4o1sn51 (1).png" alt="Among Us">
+                <p>Among Us</p>
+            </div>
+            <div class="character-card" data-character="Roblox Noob">
+                <img src="./OIP (1).jfif" alt="Roblox Noob">
+                <p>Roblox Noob</p>
+            </div>
         </div>
-      </div>
+        <div class="mission-brief hidden">
+            <h2>Mission Brief</h2>
+            <div class="mission-content">
+                <div class="mission-image">
+                    <img src="./Windows.webp" alt="Background Image">
+                </div>
+                <div class="mission-text">
+                    <p class="story">Prepare for an epic battle in the ultimate showdown!</p>
+                    <p class="objective">Objective: Defeat Patrick and survive the Floppas.</p>
+                    <ul class="mission-details">
+                        <li>Use your character's unique abilities.</li>
+                        <li>Collect weapons to increase your firepower.</li>
+                        <li>Avoid Patrick's smug attacks.</li>
+                    </ul>
+                </div>
+            </div>
+            <button id="start-game">Start Game</button>
+        </div>
     </div>
 
-    <!-- Game Screen (Initially Hidden) -->
+    <!-- Game Screen -->
     <div id="game-screen" class="game-screen hidden">
-      <canvas id="gameCanvas"></canvas>
-      <div id="game-ui">
-        <div id="health-bar">
-          <div id="health-fill"></div>
+        <canvas id="gameCanvas"></canvas>
+        <div id="game-ui">
+            <div id="health-bar">
+                <div id="health-fill"></div>
+                <div id="health-text">100%</div>
+            </div>
         </div>
-      </div>
     </div>
 
     <!-- Game Over Screen -->
-    <div id="game-over-screen" class="hidden">
-      <div class="game-over-menu">
-        <h2 id="game-over-title"></h2>
+    <div id="game-over-screen" class="game-over-menu hidden">
+        <h1 id="game-over-title"></h1>
         <button id="return-to-select">Return to Character Select</button>
-      </div>
     </div>
-  </div>
-  
-  <audio id="background-music" loop>
-    <source src="/Elevator Music.mp3" type="audio/mp3">
-  </audio>
-  
-  <audio id="battle-music" loop>
-    <source src="/05. Loonboon.mp3" type="audio/mp3">
-  </audio>
-  
-  <script type="module" src="game.js"></script>
+
+    <script src="./game.js"></script>
 </body>
 </html>
