--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h2>Level 1: Patrick's Floppa Army</h2>
             <div class="mission-content">
               <div class="mission-image">
-                <img src="/Patrick_Star.svg.png" alt="Patrick with Floppa" style="width: 200px;">
-                <img src="/floppa_png-removebg-preview.png" alt="Floppa" style="width: 150px;">
+                <img src="Patrick_Star.svg.png" alt="Patrick with Floppa" style="width: 200px;">
+                <img src="floppa_png-removebg-preview.png" alt="Floppa" style="width: 150px;">
               </div>
               <div class="mission-text">
                 <p class="story">Patrick Star has gone mad with power! After discovering a mysterious ability to command an army of Floppas, 
@@ -38,8 +38,8 @@
             <h2>Level 2: Peter's Hotel of Despair</h2>
             <div class="mission-content">
               <div class="mission-image">
-                <img src="/Peter_Griffin.png" alt="Peter Griffin" style="width: 200px;">
-                <img src="/trollface (2).png" alt="Trollface" style="width: 150px;">
+                <img src="Peter_Griffin.png" alt="Peter Griffin" style="width: 200px;">
+                <img src="trollface (2).png" alt="Trollface" style="width: 150px;">
               </div>
               <div class="mission-text">
                 <p class="story">After defeating Patrick, a new threat emerges in a mysterious liminal hotel. Peter Griffin has taken control 
@@ -67,23 +67,23 @@
         </div>
         <div class="character-grid">
           <div class="character-card" data-character="Steve">
-            <img src="/the REAL REAL STEVE.jpg" alt="Steve">
+            <img src="the REAL REAL STEVE.jpg" alt="Steve">
             <p>Steve</p>
           </div>
           <div class="character-card" data-character="Among Us">
-            <img src="/an871k4o1sn51 (1).png" alt="Among Us">
+            <img src="an871k4o1sn51 (1).png" alt="Among Us">
             <p>Among Us</p>
           </div>
           <div class="character-card" data-character="Roblox Noob">
-            <img src="/OIP (1).jfif" alt="Roblox Noob">
+            <img src="OIP (1).jfif" alt="Roblox Noob">
             <p>Roblox Noob</p>
           </div>
           <div class="character-card" data-character="Mario">
-            <img src="/smb1 mario idle.webp" alt="Mario">
+            <img src="smb1 mario idle.webp" alt="Mario">
             <p>Mario</p>
           </div>
           <div class="character-card" data-character="Chill Guy" style="display: none">
-            <img src="/chill-guy.webp" alt="Chill Guy">
+            <img src="chill-guy.webp" alt="Chill Guy">
             <p>Chill Guy</p>
             <span class="unlock-note">Special: Slows enemies to 50% speed for 3 seconds</span>
             <span class="unlock-note">(Unlocked after beating Level 2)</span>
@@ -108,7 +108,7 @@
           <!-- Enemies Tab -->
           <div id="enemies-tab" class="tab-content active">
             <div class="enemy-card">
-              <img src="/Patrick_Star.svg.png" alt="Patrick">
+              <img src="Patrick_Star.svg.png" alt="Patrick">
               <div class="enemy-info">
                 <h3>Patrick Star</h3>
                 <p class="enemy-type">Boss Enemy - Level 1</p>
@@ -120,7 +120,7 @@
             </div>
             
             <div class="enemy-card">
-              <img src="/floppa_png-removebg-preview.png" alt="Floppa">
+              <img src="floppa_png-removebg-preview.png" alt="Floppa">
               <div class="enemy-info">
                 <h3>Floppa Minion</h3>
                 <p class="enemy-type">Regular Enemy - Level 1</p>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="enemy-card level2-content">
-              <img src="/Peter_Griffin.png" alt="Peter Griffin">
+              <img src="Peter_Griffin.png" alt="Peter Griffin">
               <div class="enemy-info">
                 <h3>Peter Griffin</h3>
                 <p class="enemy-type">Boss Enemy - Level 2</p>
@@ -148,7 +148,7 @@
           <!-- Power-ups Tab -->
           <div id="powerups-tab" class="tab-content">
             <div class="powerup-card">
-              <img src="/Item_Glock-sharedassets4.assets-616.webp" alt="Gun Power-up">
+              <img src="Item_Glock-sharedassets4.assets-616.webp" alt="Gun Power-up">
               <div class="powerup-info">
                 <h3>Gun Power-up</h3>
                 <p class="powerup-type">Level 1 Power-up</p>
@@ -160,7 +160,7 @@
             </div>
 
             <div class="powerup-card level2-content">
-              <img src="/electric.png" alt="Force Field">
+              <img src="electric.png" alt="Force Field">
               <div class="powerup-info">
                 <h3>Force Field</h3>
                 <p class="powerup-type">Level 2 Power-up</p>
@@ -174,7 +174,7 @@
           <!-- Traps Tab -->
           <div id="traps-tab" class="tab-content">
             <div class="enemy-card level2-content">
-              <img src="/Exit.png" alt="Exit Trap">
+              <img src="Exit.png" alt="Exit Trap">
               <div class="enemy-info">
                 <h3>Exit Trap</h3>
                 <p class="enemy-type">Environmental Hazard - Level 2</p>
@@ -185,7 +185,7 @@
             </div>
 
             <div class="enemy-card level2-content">
-              <img src="/dfom9ho-0e411c0f-e367-480b-8c90-77ea71f64628.png" alt="Windows XP Logo">
+              <img src="dfom9ho-0e411c0f-e367-480b-8c90-77ea71f64628.png" alt="Windows XP Logo">
               <div class="enemy-info">
                 <h3>Windows XP Logo</h3>
                 <p class="enemy-type">Environmental Hazard - Level 2</p>
@@ -197,7 +197,7 @@
             </div>
 
             <div class="enemy-card level2-content">
-              <img src="/trollface (2).png" alt="Trollface">
+              <img src="trollface (2).png" alt="Trollface">
               <div class="enemy-info">
                 <h3>Trollface</h3>
                 <p class="enemy-type">Projectile Hazard - Level 2</p>
@@ -246,15 +246,15 @@
   </div>
   
   <audio id="background-music" loop>
-    <source src="/Elevator Music.mp3" type="audio/mp3">
+    <source src="Elevator Music.mp3" type="audio/mp3">
   </audio>
   
   <audio id="battle-music" loop>
-    <source src="/05. Loonboon.mp3" type="audio/mp3">
+    <source src="05. Loonboon.mp3" type="audio/mp3">
   </audio>
   
   <audio id="vine-boom">
-    <source src="/vine-boom.mp3" type="audio/mp3">
+    <source src="vine-boom.mp3" type="audio/mp3">
   </audio>
   
   <script>
