--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Character Select & Game</title>
+  <title>Chaos Combat: Crossover Clash</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,10 @@
       <div class="background-overlay"></div>
       <div id="character-details" class="character-details hidden"></div>
       <div class="character-select">
-        <h1>Choose Your Character</h1>
+        <div class="game-title">
+          <h1>Chaos Combat</h1>
+          <h2>Crossover Clash</h2>
+        </div>
         <div class="mission-brief hidden">
           <div id="level1-brief">
             <h2>Level 1: Patrick's Floppa Army</h2>
@@ -160,7 +163,7 @@
             </div>
 
             <div class="powerup-card level2-content">
-              <img src="electric.png" alt="Force Field">
+              <img src="/electric.png" alt="Force Field">
               <div class="powerup-info">
                 <h3>Force Field</h3>
                 <p class="powerup-type">Level 2 Power-up</p>
